first batch of work

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <h4>OSM no es un mapa, es una base de datos</h4>
           <ul>
             <li><a href="noesunmapa/index.html">slides</a></li>
-            <li><a href="">links</a></li>
+            <li><a href="https://gist.github.com/jsanz/3afcea05186f6a3667a5">links</a></li>
           </ul>
         </div>
       </div>
 
       <footer class="footer">
-        <p>Jorge Sanz · 2015 · <a href=""></a></p>
+        <p><a href="http://jorgesanz.net">Jorge Sanz</a> · 2015</p>
       </footer>
 
     </div> <!-- /container -->
