--- a/noesunmapa/index.html
+++ b/noesunmapa/index.html
@@ -58,15 +58,10 @@
               <li>Organizador en <a href="http://valencia.geoinquietos.org">Geoinquietos Valencia</a></li>
               <li><em><a href="http://hdyc.neis-one.org/?XuRxO">Casual mapper</a></em> en <a href="http://www.openstreetmap.org/user/XuRxO"> OSM</a></li>
             </ul>
-            ·
           </section>
           <section class="bookmark">
             <h2>Antes de empezar....</h2>
-            <img src="imgs/vimeo2008.png" alt="A year of edits">
-            <!--
-            <iframe src="//player.vimeo.com/video/2598878" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            -->
-            <p><a href="http://vimeo.com/2598878">OSM 2008: A Year of Edits</a> from <a href="http://vimeo.com/itoworld">ItoWorld</a></p>
+            <iframe width="800" height="450" src="https://www.youtube.com/embed/7sC83j6vzjo" frameborder="0" allowfullscreen></iframe>
 
           </section>
 
@@ -92,22 +87,22 @@
           </section>
 
           <section>
-            <img src="imgs/bbaa/osm-view.png" alt="Ver">
+            <img src="imgs/bbaa/osm-view.png" alt="Ver" style="max-height:600px;">
             <p><a href="http://www.openstreetmap.org/#map=19/36.83701/-2.46378">Ver</a></p>
           </section>
 
           <section>
-            <img src="imgs/bbaa/osm-query.png" alt="Consultar">
+            <img src="imgs/bbaa/osm-query.png" alt="Consultar" style="max-height:600px;">
             <p><a href="https://www.openstreetmap.org/way/159010347#map=19/36.83712/-2.46415">Consultar</a></p>
           </section>
 
           <section>
-            <img src="imgs/bbaa/osm-edit.png" alt="Editar">
+            <img src="imgs/bbaa/osm-edit.png" alt="Editar" style="max-height:600px;">
             <p>Editar</p>
           </section>
 
           <section>
-            <img src="imgs/bbaa/osm-improve.png" alt="Mejorar">
+            <img src="imgs/bbaa/osm-improve.png" alt="Mejorar" style="max-height:600px;">
             <p><a href="https://www.openstreetmap.org/api/0.6/changeset/21196864/download">¡Mejorar!</a></p>
           </section>
 
@@ -126,6 +121,10 @@
             </ul>
           </section>
 
+          <section>
+            <p><img src="imgs/map_maker_pissing.png" alt="Pissing"></p>
+          </section>
+
           <section class="bookmark">
             <h2>Open Database License</h2>
             <ul>
@@ -141,43 +140,51 @@
           </section>
 
           <section class="bookmark">
+            <h2>Hitos 1/3</h2>
+
+            <ul style="font-size:0.8em;">
+              <li>2004 - <a href="https://es.wikipedia.org/wiki/Steve_Coast">Steve Coast</a> funda OpenStreetMap en respuesta a los altos precios de <a href="https://es.wikipedia.org/wiki/Ordnance_Survey">Ordnance Survey</a> (agencia nacional de cartografía en UK) por su información</li>
+              <li>2006 - Nace la <em>OpenStreetMap Foundation</em>, fundación sin ánimo de lucro inscrita en el registro de Inglaterra</li>
+              <li>2006 - Yahoo! autoriza el uso de sus fotografías aéreas para la producción de mapas</li>
+              <li>2007 - Automotive Navigation Data dona su conjunto de datos de Países Bajos, India y China</li>
+              <li>2007 - Se completa la importación de datos sobre vías de TIGER (Censo de EEUU).</li>
+              <li>2007 - Se alcanzan los 9.000 usuarios registrados</li>
+            </ul>
+          </section>
+          <section class="bookmark">
+            <h2>Hitos 2/3</h2>
+
+            <ul style="font-size:0.8em;">
+              <li>2008 - CloudMade <em>dona más de 2,4 millones de dólares</em> a la OSMF</li>              
+              <li>2008 - Se alcanzan los 45.000 usuarios registrados</li>
+              <li>2008 - GeoBase.ca dona su conjunto de datos de Canadá, el mayor hasta el momento</li>
+              <li>2009 - Versión 0.6 de la API. Se alcanzan los 200.000 usuarios</li>
+              <li>2010 - Terremoto de Haití. Sólo dos días después OSM se <a href ="https://en.wikipedia.org/wiki/OpenStreetMap#cite_note-nytimes-47">considera</a> el "mapa digital de carreteras más completo de Haití"</li>
+              <li>2010 - Bing Maps permite el uso de sus imagenes.</li>
+            </ul>
+          </section>
+          <section class="bookmark">
             <h2>Hitos</h2>
 
-            <ul>
-              <li><strong>2004</strong> Steve Coast vs. Ordnance Survey.</li>
-
-              <li><strong>2006</strong> Fundación sin ánimo de lucro, Yahoo autoriza
-              uso imágenes.</li>
-
-              <li><strong>2007</strong> Automotive Navigation Data (AND) dona Países
-              Bajos, India y China. TIGER (Censo de EEUU).</li>
-
-              <li><strong>2008</strong> CloudMade. GeoBase.ca dona Canadá.</li>
-
-              <li><strong>2009</strong> API 0.6. 200.000 usuarios.</li>
-
-              <li><strong>2010</strong> SotM en Girona. Bing Maps (Microsoft) permite
-              uso imágenes.</li>
-
-              <li><strong>2011</strong> + 500.000 usuarios, + 1.000.000.000 nodos</li>
-
-              <li><strong>2012</strong> Cambio a ODbL, <a href=
-              "http://switch2osm.org/" title="switch2osm">#switch2osm</a>
-
-              <li><strong>2013</strong> + 1.000.000 usuarios, Tifón Yolanda</li>
-              <li><strong>2014</strong> + 1.500.000 usuarios, ???</li>
+            <ul style="font-size:0.8em;">
+              <li>2011 - >500.000 usuarios registrados. >1.000.000.000 nodos creados</li>
+              <li>2012 - Cambio a la licencia <em>ODbl</em>, Se lanza la campaña <a href="https://switch2osm.org/">#swith2osm</a></li>
+              <li>2012 - Numerosas compañías adoptan OSM: Foursquare, Craiglist, Apple,...</li>
+              <li>2013 - Un <em>millón</em> de usuarios. Tras el tifón Yolanda la <em>comunidad de OSM</em> vuelve a demostrar su importancia para las organizaciones humanitarias</li>
+              <li>2014 - >1.500.000 usuarios. Constantes artículos en prensa <i>mainstream</i></li>
+              <li>2015 - Se alcanzan los <em>dos millones</em> de usuarios</li>
             </ul>
           </section>
 
           <section>
             <h2>Números</h2>
+            <p style="margin-bottom:.5em;">A 22 de junio de 2015:</p>
             <ul>
-              <li>A 19 de marzo de 2014</li>
-              <li>1.554.973 usuarios</li>
-              <li>3.850.724.816 puntos GPS</li>
-              <li>2.249.508.428 nodos</li>
-              <li>222.362.704 líneas</li>
-              <li>2.440.593 relaciones</li>
+              <li>2,1M usuarios</li>
+              <li>4.719M puntos GPS</li>
+              <li>2.926M nodos</li>
+              <li>295M líneas</li>
+              <li>3,5M relaciones</li>
               <li><a href="http://www.openstreetmap.org/stats/data_stats.html">Fuente</a></li>
             </ul>
 
@@ -188,22 +195,20 @@
           </section>
 
           <section>
-            <img src="imgs/compare/compare-almeria.png" alt="Almería">
-            <p><a href="http://tools.geofabrik.de/mc/?lon=-2.46255&lat=36.83687&zoom=17&num=2&mt0=mapnik&mt1=google-map">Almería</a></p>
+            <img src="imgs/map_compare_caja_magica.png" alt="OpenStreetMap vs Google Maps en la Caja Mágica" />
+            <p>Fuente: <a href="http://tools.geofabrik.de/mc/#16/40.3715/-3.6844&num=2&mt0=mapnik&mt1=google-map">GeoFrabrik Tools</a></p>
           </section>
           <section>
-            <img src="imgs/compare/compare-burgos.png" alt="Burgos">
-            <p><a href="http://tools.geofabrik.de/mc/?lon=-3.69205&lat=42.34575&zoom=16&num=2&mt0=mapnik&mt1=google-map">Burgos</a></p>
+            <img src="imgs/map_compare_Burgos.png" alt="OpenStreetMap vs Google Maps en Burgos" />
+              <p>Fuente: <a href="http://tools.geofabrik.de/mc/#12/42.3547/-3.6976&num=2&mt0=mapnik&mt1=google-map">GeoFrabrik Tools</a></p>
           </section>
           <section>
-            <img src="imgs/compare/compare-kibera.png" alt="Kibera">
-            <p><a href="http://tools.geofabrik.de/mc/?lon=36.78924&lat=-1.31294&zoom=17&num=2&mt0=mapnik&mt1=google-map">Kibera</a> ·
-              <a href="http://www.mapkibera.org/">mapkibera.org</a></p>
+            <img src="imgs/map_compare_Puerta_Brandemburgo.png" alt="OpenStreetMap vs Google Maps en la Puerta de Brandemburgo" />
+              <p>Fuente: <a href="http://tools.geofabrik.de/mc/#15/52.5159/13.3779&num=2&mt0=mapnik&mt1=google-map">GeoFrabrik Tools</a></p>
           </section>
           <section>
-            <img src="imgs/compare/compare-haiti.png" alt="Haiti">
-            <p><a href="http://tools.geofabrik.de/mc/?lon=-72.33904&lat=18.54124&zoom=16&num=2&mt0=mapnik&mt1=google-map">Puerto Príncipe</a> ·
-              <a href="http://wiki.openstreetmap.org/wiki/WikiProject_Haiti">wiki</a></p>
+            <img src="imgs/map_compare_Haiti.png" alt="OpenStreetMap vs Google Maps en Haiti" />
+            <p>Fuente: <a href="http://tools.geofabrik.de/mc/#11/18.5735/-72.2678&num=2&mt0=mapnik&mt1=google-map">GeoFrabrik Tools</a></p>
           </section>
 
           <section class="bookmark">
@@ -219,8 +224,7 @@
 
               <li>La mayor parte del trabajo es remoto</li>
 
-              <li>Actualmente trabajando en Haití,
-              Indonesia, Somalia, Costa de Marfil... </li>
+              <li>Actualmente trabajando en Nepal, Malawi, Indonesia, Nigeria, ... </li>
             </ul>
 
             <p style="text-align:center;margin-top:20px;"><a href=
@@ -229,7 +233,7 @@
           </section>
 
           <section>
-            <img src="imgs/compare/compare-tacloban.png" alt="Filipinas">
+            <img style="max-height:500px;" src="imgs/compare/compare-tacloban.png" alt="Filipinas">
             <p><a href="http://tools.geofabrik.de/mc/?lon=125.00151&lat=11.24581&zoom=17&num=2&mt0=mapnik&mt1=google-map">Tacloban</a> ·
               <a href="http://wiki.openstreetmap.org/wiki/Typhoon_Haiyan">wiki</a> · <a href="http://resultmaps.neis-one.org/osm-typhoon-haiyan-2013/#8/11.682/122.953">mapa de cambios</a>
               <br/> ¡4.8M de cambios en la base de datos en 2/3 semanas!</p>
@@ -318,19 +322,16 @@
 
         <!-- FIN Cómo contribuir a OSM -->
 
-        <!-- OSM para desarrolladores -->
+        <!-- Los datos en OSM -->
         <section>
           <section>
             <h2>Tercera parte</h2>
-            <h3>OSM para desarrolladores</h3>
+            <h3>Los datos en OSM</h3>
 
-            <img src="imgs/happy.gif" alt="Happy" style="width:250px;">
+
+            <img src="imgs/strategy.gif" alt="Strategy" style="width:450px;">
           </section>
 
-
-          <section>
-            <img class="figure" src="imgs/dev/dev-mapping-software.png" alt="Mapping Software">
-          </section>
           <section>
             <h2>El modelo de datos de OSM</h2>
             <ul>
@@ -338,7 +339,7 @@
               <li>Primitivas <strong>gráficas</strong>
                 <ul>
                   <li>Nodos</li>
-                  <li>Vías (si se cierran pueden ser un área)</li>
+                  <li>Vías (si se cierran <em>pueden</em> ser un área)</li>
                 </ul>
               </li>
               <li>Atributos <strong>alfanuméricos</strong>
@@ -461,7 +462,22 @@
             </code></pre>
             <p><a href="https://www.openstreetmap.org/api/0.6/relation/2545358">https://www.openstreetmap.org/api/0.6/relation/2545358</a></p>
           </section>
+        </section>
+        <!-- FIN los datos en OSM -->
 
+        <!-- OSM para desarrolladores -->
+        <section>
+          <section>
+            <h2>Cuarta parte</h2>
+            <h3>OSM para desarrolladores</h3>
+
+            <img src="imgs/happy.gif" alt="Happy" style="width:250px;">
+          </section>
+
+
+          <section>
+            <img class="figure" src="imgs/dev/dev-mapping-software.png" alt="Mapping Software">
+          </section>
 
           <section>
             <h2>La API de OSM</h2>
@@ -708,13 +724,16 @@ max_lat="41.5859881" max_lon="2.0241229"&gt;
           </section>
 
           <section><img src="imgs/dev/dev-all.png" alt="Todo" class="figure"></section>
+        </section>
+        <!-- FIN OSM para desarrolladores-->
+
+        <!-- Ejemplos de mapas -->
+        <section>
 
           <section>
-            <blockquote>
-              ¿A quién no le gustan son los mapas?
-            </blockquote>
+            <h2>Quinta parte</h2>
+            <h3> ¿A quién no le gustan son los mapas? </h3> 
           </section>
-
           <section>
             <h2>Oficial</h2>
             <a href="http://www.openstreetmap.org/#map=16/36.8343/-2.4619">
@@ -795,23 +814,17 @@ max_lat="41.5859881" max_lon="2.0241229"&gt;
             <a href="https://a.tiles.mapbox.com/v3/saman.h6ek9086/page.html?secure=1#16/36.8332/-2.4610">
             <img src="imgs/maps/12-random.png" alt="Random"></a>
           </section>
-
-
-
         </section>
-        <!-- FIN OSM para desarrolladores-->
-
 
         <!-- Cierre -->
-
         <section>
           <section>
             <h1>¡Gracias!</h1>
             <p>
               <a href="http://jorgesanz.net">Jorge Sanz</a> · <a href="http://twitter.com/xurxosanz">@xurxosanz</a><br/>
-              <a href="https://gist.github.com/jsanz/9648322/">Enlaces y referencias</a><br/>
+              <a href="https://gist.github.com/jsanz/3afcea05186f6a3667a5">Enlaces y referencias</a><br/>
               <span class="monospace">
-              <a href="http://bit.ly/elhackaton-osm">http://bit.ly/elhackaton-osm</a>
+              <a href="http://bit.ly/jsanz-osm">http://bit.ly/jsanz-osm</a>
               </span>
             </p>
 
@@ -878,7 +891,7 @@ max_lat="41.5859881" max_lon="2.0241229"&gt;
       });
 
 
-      $('section.bookmark h2').prepend('<a href="https://gist.github.com/jsanz/9648322"><img src="css/bookmark.png"></a>');
+      $('section.bookmark h2').prepend('<a href="https://gist.github.com/jsanz/9648322"><img src="../css/bookmark.png"></a>');
 
     </script>
 
