--- a/noesunmapa/index.html
+++ b/noesunmapa/index.html
@@ -140,10 +140,10 @@
           </section>
 
           <section class="bookmark">
-            <h2>Hitos 1/3</h2>
+            <h2>Historia 1/3</h2>
 
             <ul style="font-size:0.8em;">
-              <li>2004 - <a href="https://es.wikipedia.org/wiki/Steve_Coast">Steve Coast</a> funda OpenStreetMap en respuesta a los altos precios de <a href="https://es.wikipedia.org/wiki/Ordnance_Survey">Ordnance Survey</a> (agencia nacional de cartografía en UK) por su información</li>
+              <li>2004 - <a href="https://es.wikipedia.org/wiki/Steve_Coast">Steve Coast</a> funda OpenStreetMap en respuesta a los altos precios de <a href="https://es.wikipedia.org/wiki/Ordnance_Survey">Ordnance Survey</a> por su información</li>
               <li>2006 - Nace la <em>OpenStreetMap Foundation</em>, fundación sin ánimo de lucro inscrita en el registro de Inglaterra</li>
               <li>2006 - Yahoo! autoriza el uso de sus fotografías aéreas para la producción de mapas</li>
               <li>2007 - Automotive Navigation Data dona su conjunto de datos de Países Bajos, India y China</li>
@@ -152,7 +152,7 @@
             </ul>
           </section>
           <section class="bookmark">
-            <h2>Hitos 2/3</h2>
+            <h2>Historia 2/3</h2>
 
             <ul style="font-size:0.8em;">
               <li>2008 - CloudMade <em>dona más de 2,4 millones de dólares</em> a la OSMF</li>              
@@ -164,7 +164,7 @@
             </ul>
           </section>
           <section class="bookmark">
-            <h2>Hitos</h2>
+            <h2>Historia 3/3</h2>
 
             <ul style="font-size:0.8em;">
               <li>2011 - >500.000 usuarios registrados. >1.000.000.000 nodos creados</li>
@@ -233,7 +233,7 @@
           </section>
 
           <section>
-            <img style="max-height:500px;" src="imgs/compare/compare-tacloban.png" alt="Filipinas">
+            <img style="max-height:500px;" src="imgs/map_compare-tacloban.png" alt="Filipinas">
             <p><a href="http://tools.geofabrik.de/mc/?lon=125.00151&lat=11.24581&zoom=17&num=2&mt0=mapnik&mt1=google-map">Tacloban</a> ·
               <a href="http://wiki.openstreetmap.org/wiki/Typhoon_Haiyan">wiki</a> · <a href="http://resultmaps.neis-one.org/osm-typhoon-haiyan-2013/#8/11.682/122.953">mapa de cambios</a>
               <br/> ¡4.8M de cambios en la base de datos en 2/3 semanas!</p>
@@ -757,31 +757,6 @@ max_lat="41.5859881" max_lon="2.0241229"&gt;
 
           <section>
             <h2>Pero esto solo es el principio</h2>
-          </section>
-
-          <section>
-            <h2>Algunos estilos ofrecidos por Cloudmade</h2>
-          </section>
-
-          <section>
-            <h2>Midnight Commander</h2>
-            <a href="http://maps.cloudmade.com/?lat=40.74742&lng=-73.987212&zoom=15&styleId=999&opened_tab=0">
-            <img src="imgs/maps/05-midnight.png" alt="MC"></a>
-          </section>
-          <section>
-            <h2>Pale down</h2>
-            <a href="http://maps.cloudmade.com/?lat=40.74742&lng=-73.987212&zoom=15&styleId=998&opened_tab=0">
-            <img src="imgs/maps/06-pale.png" alt="Pale"></a>
-          </section>
-          <section>
-            <h2>Free line</h2>
-            <a href="http://maps.cloudmade.com/?lat=40.74742&lng=-73.987212&zoom=15&styleId=2&opened_tab=0">
-            <img src="imgs/maps/07-freeline.png" alt="Freeline"></a>
-          </section>
-          <section>
-            <h2>City living</h2>
-            <a href="http://maps.cloudmade.com/?lat=40.74742&lng=-73.987212&zoom=15&styleId=2400&opened_tab=0">
-            <img src="imgs/maps/08-city-living.png" alt="City living"></a>
           </section>
 
           <section>
