Typo fix in #switch2osm

--- a/noesunmapa/index.html
+++ b/noesunmapa/index.html
@@ -168,7 +168,7 @@
 
             <ul style="font-size:0.8em;">
               <li>2011 - >500.000 usuarios registrados. >1.000.000.000 nodos creados</li>
-              <li>2012 - Cambio a la licencia <em>ODbl</em>, Se lanza la campaña <a href="https://switch2osm.org/">#swith2osm</a></li>
+              <li>2012 - Cambio a la licencia <em>ODbl</em>, Se lanza la campaña <a href="https://switch2osm.org/">#switch2osm</a></li>
               <li>2012 - Numerosas compañías adoptan OSM: Foursquare, Craiglist, Apple,...</li>
               <li>2013 - Un <em>millón</em> de usuarios. Tras el tifón Yolanda la <em>comunidad de OSM</em> vuelve a demostrar su importancia para las organizaciones humanitarias</li>
               <li>2014 - >1.500.000 usuarios. Constantes artículos en prensa <i>mainstream</i></li>
