--- a/sinergias-ign/README.html
+++ b/sinergias-ign/README.html
@@ -182,14 +182,14 @@
 <hr>
 
 <h2>
-<a id="user-content-el-proyecto-cinco-años-después" class="anchor" href="#el-proyecto-cinco-a%C3%B1os-despu%C3%A9s" aria-hidden="true"><span class="octicon octicon-link"></span></a>El proyecto cinco años después</h2>
+<a id="user-content-5-años-después" class="anchor" href="#5-a%C3%B1os-despu%C3%A9s" aria-hidden="true"><span class="octicon octicon-link"></span></a>5 años después</h2>
 
 <p><a href="map-corps.png" target="_blank"><img src="map-corps.png" alt="The National Map Corps" style="max-width:100%;"></a></p>
 
 <hr>
 
 <h2>
-<a id="user-content-el-proyecto-cinco-años-después-1" class="anchor" href="#el-proyecto-cinco-a%C3%B1os-despu%C3%A9s-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>El proyecto cinco años después</h2>
+<a id="user-content-5-años-después-1" class="anchor" href="#5-a%C3%B1os-despu%C3%A9s-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>5 años después</h2>
 
 <ul>
 <li><a href="http://nationalmap.gov/TheNationalMapCorps/">The National Map Corps</a></li>
