--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <li><a href="noesunmapa/index.html">slides</a></li>
             <li><a href="https://gist.github.com/jsanz/3afcea05186f6a3667a5">links</a></li>
           </ul>
+          <h4>Sinergias con el IGN</h4>
+          <ul>
+            <li><a href="sinergias-ign/index.html">slides</a> (<a href="sinergias-ign/README.html">notas</a>) </li>
+          </ul>
         </div>
-        <h4>Sinergias con el IGN</h4>
-        <ul>
-          <li><a href="sinergias-ign/README.html">Notas</a></li>
-        </ul>
       </div>
 
       <footer class="footer">
