created EN version

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
         <div class="col-lg-12">
           <h4>OSM no es un mapa, es una base de datos</h4>
           <ul>
-            <li><a href="noesunmapa/index.html">slides</a></li>
+            <li><a href="noesunmapa/index.html">slides ES</a> · <a href="noesunmapa/index-en.html">slides EN</a></li>
             <li><a href="https://gist.github.com/jsanz/3afcea05186f6a3667a5">links</a></li>
           </ul>
           <h4>Sinergias con el IGN</h4>
